[gd_scene load_steps=15 format=3 uid="uid://bk5e3tn2k0vcl"]

[ext_resource type="Script" uid="uid://daelfwwj35v86" path="res://scripts/player/Player.gd" id="1_h6syq"]
[ext_resource type="Texture2D" uid="uid://dtlgjn1r5pwy5" path="res://assets/gfx/sprites/player_sprite.png" id="2_v2miy"]
[ext_resource type="Texture2D" uid="uid://bbxcawn5cewo0" path="res://assets/gfx/sprites/hit_judge.png" id="3_0owmy"]
[ext_resource type="Script" uid="uid://b2s5ugkn1hyi6" path="res://scripts/player/HitJudgeContainer.gd" id="3_qek5x"]
[ext_resource type="Script" uid="uid://dovrmdtqiurir" path="res://scripts/player/HpNode.gd" id="3_v2miy"]
[ext_resource type="Script" uid="uid://bdpiag8mk0uqn" path="res://scripts/player/BlessingContainer.gd" id="4_0owmy"]
[ext_resource type="PackedScene" uid="uid://isv53e4mqpf3" path="res://scenes/player/fairy_container.tscn" id="4_ouxva"]
[ext_resource type="Texture2D" uid="uid://bkh3hgm2pk8p5" path="res://assets/gfx/sprites/hit_judge_circle.png" id="4_qek5x"]
[ext_resource type="Shader" uid="uid://dy4rq8aq4n2qk" path="res://assets/shaders/sprite_blend_add.gdshader" id="5_5gtgg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ouxva"]
atlas = ExtResource("2_v2miy")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5dr7"]
atlas = ExtResource("2_v2miy")
region = Rect2(256, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_toylo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouxva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5dr7")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gtgg"]
radius = 7.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5gtgg"]
shader = ExtResource("5_5gtgg")

[node name="Player" type="Area2D" groups=["players"]]
script = ExtResource("1_h6syq")
speed = 400.0
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_toylo")
frame_progress = 0.0853613

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5gtgg")

[node name="HitJudgeContainer" type="Node2D" parent="."]
z_index = 1
script = ExtResource("3_qek5x")
circle_alpha_home = 0.7

[node name="HitJudgePoint" type="Sprite2D" parent="HitJudgeContainer"]
texture = ExtResource("3_0owmy")

[node name="HitJudgeCircle" type="Sprite2D" parent="HitJudgeContainer"]
material = SubResource("ShaderMaterial_5gtgg")
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_qek5x")

[node name="HpNode" type="Node" parent="."]
script = ExtResource("3_v2miy")
max_hp = 50

[node name="EquippedBlessings" type="Node" parent="."]
script = ExtResource("4_0owmy")

[node name="FairyContainer" parent="." instance=ExtResource("4_ouxva")]
position = Vector2(2, 0)
